# DotRandom

./: LICENSE.txt  README.md  dotrandom.cabal
app/: Main.hs
src/main/Dotrandom/: Banlist.hs  Hero.hs  HeroLists.hs  InternalName.hs  Positions.hs  Team.hs
