Cabal-Version:       3.8
Name:                dotrandom
Version:             1.0
Category:            CLI
Stability:           Experimental
Build-type:          Simple

Common common
  Default-Language:   GHC2024
  Default-Extensions: OverloadedRecordDot, OverloadedStrings
  Build-Depends:
    bizzlelude >= 4.20.2.0.1 && < 4.21.0
  GHC-Options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-import-lists
    -Wredundant-constraints
    -fno-warn-name-shadowing
    -funbox-strict-fields
    -O2

Executable dotrandom
  Import:          common
  Hs-Source-Dirs:  app
  Main-Is:         Main.hs
  Build-Depends:
    containers,
    dotrandom,
    random     >= 1.2.1 && < 1.3.0,
    text

Library
  Import:          common
  Hs-Source-Dirs:  src/main
  Exposed-Modules:
    Dotrandom.Banlist,
    Dotrandom.Hero,
    Dotrandom.InternalName,
    Dotrandom.Positions,
    Dotrandom.Team
  Other-Modules:
  Build-Depends:
    containers >= 0.7   && < 0.8,
    text       >= 2.1.3 && < 2.2.0,
